# fisheye-flatten

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: cli.rs  roundtrip.rs
tests/common/: mod.rs
